@@ -32,14 +32,14 @@ $versions['AUTHORS']='11306';
 $versions['ChangeLog']='';
 $versions['LICENSE.txt']='11584';
 $versions['README']='17874';
-$versions['Version.php']='18021';
+$versions['Version.php']='18436';
 $versions['add_photos_refresh.php']='17858';
-$versions['admin-page.php']='17909';
-$versions['albums.php']='17874';
+$versions['admin-page.php']='18429';
+$versions['albums.php']='18429';
 $versions['block-feature-item.php']='16788';
 $versions['block-random.php']='17876';
 $versions['captionator.php']='17894';
-$versions['classes/Album.php']='17992';
+$versions['classes/Album.php']='18428';
 $versions['classes/AlbumDB.php']='17886';
 $versions['classes/AlbumItem.php']='17914';
 $versions['classes/Colors.php']='17840';
@@ -121,7 +121,7 @@ $versions['contrib/phpnuke/block-Random_Image.php.sample']='17858';
 $versions['contrib/phpnuke/modules.php.MOD']='17858';
 $versions['contrib/postnuke/readme.750']='14282';
 $versions['crop_photo.php']='17870';
-$versions['css/base.css.default']='17919';
+$versions['css/base.css.default']='18431';
 $versions['css/embedded_style.css.default']='15946';
 $versions['css/jscalendar/aqua/active-bg.gif']='';
 $versions['css/jscalendar/aqua/dark-bg.gif']='';
@@ -138,9 +138,9 @@ $versions['css/lightbox.css']='13850';
 $versions['css/ltr.css.default']='17860';
 $versions['css/mooRainbow.css']='16779';
 $versions['css/rtl.css.default']='17860';
-$versions['css/screen.css.default']='17919';
+$versions['css/screen.css.default']='18431';
 $versions['css/sidebar.css.default']='17081';
-$versions['css/yui/folders/tree.css']='17858';
+$versions['css/yui-tree.css']='13850';
 $versions['gallery_remote.php']='18004';
 $versions['gallery_remote2.php']='18004';
 $versions['help/blacklist.txt']='14533';
@@ -198,13 +198,13 @@ $versions['images/gallery1.gif']='';
 $versions['images/galleryLogo_sm.gif']='';
 $versions['images/green_trafficlight.gif']='';
 $versions['images/icons/LICENSE']='13850';
-$versions['images/icons/admin.gif']='';
 $versions['images/icons/application_side_contract.png']='';
 $versions['images/icons/application_side_expand.png']='';
 $versions['images/icons/arrow_switch.png']='';
-$versions['images/icons/behavior-capplet.gif']='';
 $versions['images/icons/calc.png']='';
 $versions['images/icons/camera.gif']='';
+$versions['images/icons/cog.png']='';
+$versions['images/icons/comments.png']='';
 $versions['images/icons/compressed.gif']='';
 $versions['images/icons/decrypted.gif']='';
 $versions['images/icons/delete.gif']='';
@@ -213,7 +213,6 @@ $versions['images/icons/editcopy.gif']='';
 $versions['images/icons/exit.gif']='';
 $versions['images/icons/folder_clock.png']='';
 $versions['images/icons/folder_edit.png']='';
-$versions['images/icons/folder_new.gif']='';
 $versions['images/icons/folder_new.png']='';
 $versions['images/icons/frame_query.gif']='';
 $versions['images/icons/help.gif']='';
@@ -231,9 +230,12 @@ $versions['images/icons/kcmfontinst.gif']='';
 $versions['images/icons/kdf.gif']='';
 $versions['images/icons/key.gif']='';
 $versions['images/icons/key.png']='';
+$versions['images/icons/langiconclassic.png']='';
 $versions['images/icons/locked.gif']='';
 $versions['images/icons/login.gif']='';
 $versions['images/icons/logout.gif']='';
+$versions['images/icons/map.png']='';
+$versions['images/icons/monitor.png']='';
 $versions['images/icons/move.png']='';
 $versions['images/icons/nav_first.gif']='';
 $versions['images/icons/nav_last.gif']='';
@@ -250,7 +252,6 @@ $versions['images/icons/navigation/nav_page.gif']='';
 $versions['images/icons/navigation/nav_prev.gif']='';
 $versions['images/icons/navigation/return_to.gif']='';
 $versions['images/icons/new.png']='';
-$versions['images/icons/new_album.gif']='';
 $versions['images/icons/no_idea.gif']='';
 $versions['images/icons/notice/error.gif']='';
 $versions['images/icons/notice/information.gif']='';
@@ -258,8 +259,8 @@ $versions['images/icons/notice/success.gif']='';
 $versions['images/icons/notice/warning.gif']='';
 $versions['images/icons/options.png']='';
 $versions['images/icons/paint.png']='';
+$versions['images/icons/picture_edit.png']='';
 $versions['images/icons/preferences.gif']='';
-$versions['images/icons/presentation.gif']='';
 $versions['images/icons/puzzle.png']='';
 $versions['images/icons/refresh.png']='';
 $versions['images/icons/register.gif']='';
@@ -271,11 +272,9 @@ $versions['images/icons/slideshow/1leftarrow.gif']='';
 $versions['images/icons/slideshow/1rightarrow.gif']='';
 $versions['images/icons/slideshow/play_stop.gif']='';
 $versions['images/icons/tab_duplicate.gif']='';
-$versions['images/icons/thumbnail.gif']='';
+$versions['images/icons/text_list_numbers.png']='';
 $versions['images/icons/undo.png']='';
-$versions['images/icons/unsortedList.gif']='';
 $versions['images/icons/user_gray.gif']='';
-$versions['images/icons/view_comment.gif']='';
 $versions['images/icons/viewmag1.gif']='';
 $versions['images/icons/window_fullscreen.gif']='';
 $versions['images/icons/window_nofullscreen.gif']='';
@@ -305,19 +304,18 @@ $versions['images/simplex-bkg.gif']='';
 $versions['images/uploading.gif']='';
 $versions['images/yellow_red_trafficlight.gif']='';
 $versions['images/yellow_trafficlight.gif']='';
-$versions['images/yui/treeview/folders/lm.gif']='';
-$versions['images/yui/treeview/folders/lmh.gif']='';
-$versions['images/yui/treeview/folders/ln.gif']='';
-$versions['images/yui/treeview/folders/loading.gif']='';
-$versions['images/yui/treeview/folders/lp.gif']='';
-$versions['images/yui/treeview/folders/lph.gif']='';
-$versions['images/yui/treeview/folders/tm.gif']='';
-$versions['images/yui/treeview/folders/tmh.gif']='';
-$versions['images/yui/treeview/folders/tn.gif']='';
-$versions['images/yui/treeview/folders/tp.gif']='';
-$versions['images/yui/treeview/folders/tph.gif']='';
-$versions['images/yui/treeview/folders/vline.gif']='';
-$versions['images/yui/windowclose.gif']='';
+$versions['images/yui/folders/lm.gif']='';
+$versions['images/yui/folders/lmh.gif']='';
+$versions['images/yui/folders/ln.gif']='';
+$versions['images/yui/folders/loading.gif']='';
+$versions['images/yui/folders/lp.gif']='';
+$versions['images/yui/folders/lph.gif']='';
+$versions['images/yui/folders/tm.gif']='';
+$versions['images/yui/folders/tmh.gif']='';
+$versions['images/yui/folders/tn.gif']='';
+$versions['images/yui/folders/tp.gif']='';
+$versions['images/yui/folders/tph.gif']='';
+$versions['images/yui/folders/vline.gif']='';
 $versions['includes/add_photos/add_applet.cfg']='17858';
 $versions['includes/add_photos/add_applet.inc']='17858';
 $versions['includes/add_photos/add_applet_mini.cfg']='17858';
@@ -410,17 +408,12 @@ $versions['js/wz/tip_balloon/stemt.gif']='';
 $versions['js/wz/tip_balloon/t.gif']='';
 $versions['js/wz/wz_jsgraphics.js']='17298';
 $versions['js/wz/wz_tooltip.js']='17298';
-$versions['js/yui/TODO']='15390';
-$versions['js/yui/animation-min.js']='15390';
-$versions['js/yui/autocomplete-min.js']='15390';
-$versions['js/yui/connection-min.js']='15390';
-$versions['js/yui/container-min.js']='15848';
-$versions['js/yui/container_core-min.js']='15390';
-$versions['js/yui/dom-min.js']='15390';
-$versions['js/yui/dragdrop-min.js']='15390';
-$versions['js/yui/event-min.js']='15390';
-$versions['js/yui/treeview-min.js']='15390';
-$versions['js/yui/yahoo-min.js']='15390';
+$versions['js/yui/animation-min.js']='13850';
+$versions['js/yui/autocomplete-min.js']='13850';
+$versions['js/yui/connection-min.js']='13850';
+$versions['js/yui/datasource-min.js']='13850';
+$versions['js/yui/treeview-min.js']='13850';
+$versions['js/yui/yahoo-dom-event.js']='13850';
 $versions['layout/adminbox.inc']='17875';
 $versions['layout/breadcrumb.inc']='16662';
 $versions['layout/commentdraw.inc']='17858';
@@ -579,39 +572,39 @@ $versions['layout/inline_imagewrap.inc']='13817';
 $versions['layout/navigator.inc']='17973';
 $versions['layout/navmicro.inc']='17975';
 $versions['layout/navphoto.inc']='17973';
-$versions['layout/searchdraw.inc']='17974';
+$versions['layout/searchdraw.inc']='18433';
 $versions['layout/userData.inc']='17911';
 $versions['layout/watermarkform.inc']='17881';
-$versions['lib/album.php']='17974';
-$versions['lib/albumItem.php']='18004';
+$versions['lib/album.php']='18435';
+$versions['lib/albumItem.php']='18436';
 $versions['lib/autocomplete/YUIsearch_files.php']='12505';
-$versions['lib/content.php']='17971';
+$versions['lib/content.php']='18435';
 $versions['lib/filesystem.php']='17907';
 $versions['lib/filetypes.php']='17859';
 $versions['lib/form.php']='17974';
-$versions['lib/groups.php']='17887';
+$versions['lib/groups.php']='18428';
 $versions['lib/imageManipulation.php']='17992';
-$versions['lib/lang.php']='17972';
+$versions['lib/lang.php']='18429';
 $versions['lib/mail.php']='17907';
 $versions['lib/messages.php']='17907';
 $versions['lib/popup.php']='17865';
 $versions['lib/progressbar.php']='17321';
-$versions['lib/setup.php']='17911';
-$versions['lib/stats.php']='17978';
+$versions['lib/setup.php']='18436';
+$versions['lib/stats.php']='18428';
 $versions['lib/tabs.php']='17858';
 $versions['lib/text.php']='17858';
 $versions['lib/url.php']='17908';
 $versions['lib/usage.php']='17858';
 $versions['lib/users.php']='17321';
-$versions['lib/valchecks.php']='17907';
+$versions['lib/valchecks.php']='18436';
 $versions['lib/voting.php']='17973';
-$versions['login.php']='17872';
-$versions['manifest.inc']='18031';
+$versions['login.php']='18429';
+$versions['manifest.inc']='18437';
 $versions['new_password.php']='17914';
 $versions['nls.php']='17858';
 $versions['picture.php']='16662';
-$versions['platform/fs_unix.php']='17890';
-$versions['platform/fs_win32.php']='17992';
+$versions['platform/fs_unix.php']='18428';
+$versions['platform/fs_win32.php']='18428';
 $versions['poll_results.php']='17914';
 $versions['popups/add_comment.php']='17870';
 $versions['popups/add_photos.php']='18004';
@@ -629,7 +622,7 @@ $versions['popups/do_command.php']='17866';
 $versions['popups/download.php']='17866';
 $versions['popups/ecard_form.php']='17912';
 $versions['popups/ecard_preview.php']='17912';
-$versions['popups/edit_appearance.php']='17883';
+$versions['popups/edit_appearance.php']='18434';
 $versions['popups/edit_caption.php']='17883';
 $versions['popups/edit_field.php']='17870';
 $versions['popups/edit_thumb.php']='17883';
@@ -662,11 +655,11 @@ $versions['popups/view_photo_properties.php']='17889';
 $versions['popups/watermark_album.php']='17890';
 $versions['publish_xp.php']='17859';
 $versions['publish_xp_docs.php']='17858';
-$versions['rss.php']='17870';
-$versions['search.php']='17888';
+$versions['rss.php']='18433';
+$versions['search.php']='18429';
 $versions['secure.sh']='6294';
 $versions['session.php']='18004';
-$versions['setup/check.inc']='17874';
+$versions['setup/check.inc']='18436';
 $versions['setup/check_imagemagick.php']='17858';
 $versions['setup/check_mail.php']='17858';
 $versions['setup/check_netpbm.php']='17858';
@@ -733,6 +726,12 @@ $versions['skins/butterfly_green/images/mod_toplight_bg.jpg']='';
 $versions['skins/butterfly_green/images/mod_toplight_left.jpg']='';
 $versions['skins/butterfly_green/images/screenshot.jpg']='';
 $versions['skins/butterfly_green/style.def']='14282';
+$versions['skins/danmaher/css/screen.css.default']='17919';
+$versions['skins/danmaher/images/adminbox_bg.gif']='';
+$versions['skins/danmaher/images/body_bg.gif']='';
+$versions['skins/danmaher/images/box_bg.gif']='';
+$versions['skins/danmaher/images/headerbox_bg.gif']='';
+$versions['skins/danmaher/images/nav_bg.gif']='';
 $versions['skins/hotred/css/screen.css']='14282';
 $versions['skins/hotred/images/mod_descbg.jpg']='';
 $versions['skins/hotred/images/mod_descbox.jpg']='';
@@ -820,34 +819,30 @@ $versions['skins/yellow/images/mod_titlemid.jpg']='';
 $versions['skins/yellow/images/screenshot.jpg']='';
 $versions['skins/yellow/style.def']='14282';
 $versions['slideshow.php']='18004';
-$versions['stats-wizard.php']='17909';
-$versions['stats.php']='17876';
-$versions['templates/classic/album.header.jade.tpl.default']='13809';
+$versions['stats-wizard.php']='18429';
+$versions['stats.php']='18429';
 $versions['templates/classic/album.header.tpl.default']='13820';
 $versions['templates/classic/album.tpl.default']='13820';
-$versions['templates/classic/gallery.header.jade.tpl.default']='13492';
 $versions['templates/classic/gallery.header.tpl.default']='13820';
 $versions['templates/classic/gallery.tpl.default']='13820';
-$versions['templates/classic/photo.header.jade.tpl.default']='13744';
 $versions['templates/classic/photo.header.tpl.default']='13821';
 $versions['templates/classic/photo.tpl.default']='13821';
 $versions['templates/classic_sidebar/album.tpl.default']='13820';
 $versions['templates/classic_sidebar/gallery.tpl.default']='13820';
 $versions['templates/classic_sidebar/photo.tpl.default']='13821';
 $versions['templates/commentbox.tpl.default']='13490';
-$versions['templates/info_donation-block.tpl.default']='16777';
+$versions['templates/headerbox.footer.tpl.default']='13850';
+$versions['templates/info_donation-block.tpl.default']='18433';
 $versions['templates/matrix/gallery.tpl.default']='13820';
 $versions['templates/overall.footer.tpl.default']='13490';
 $versions['templates/overall.header.tpl.default']='13490';
 $versions['templates/setup/im-netpbm-test.tpl']='13820';
-$versions['templates/slideshow.header.jade.tpl.default']='13820';
 $versions['templates/slideshow.header.tpl.default']='13820';
-$versions['templates/stats.header.jade.tpl.default']='13820';
 $versions['templates/stats.header.tpl.default']='13820';
 $versions['upgrade_users.php']='17858';
-$versions['usage.php']='17909';
+$versions['usage.php']='18429';
 $versions['util.php']='17971';
-$versions['view_album.php']='17975';
+$versions['view_album.php']='18428';
 $versions['view_comments.php']='17919';
-$versions['view_photo.php']='17920';
+$versions['view_photo.php']='18429';
 ?>
