@@ -1,3 +1,14 @@
+2008-11-02 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b9
+
+ *** SECURITY FIX ***
+
+ In environments with register globals it was possible to
+ gain admin access via abusing cookies.
+ This bug affects all Gallery 1.x version from 1.5.8-svn-b34 on.
+
+ The Gallery team would like to thank John Hisdock for
+ gently reporting this and give us time to make an adequate fix.
+
 2008-11-02 Jens Tkotz <jens@peino.de> 1.6-RC3-svn-b8
 
  * Change: "Missing" languages in setup are now just an information.
